...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="A2j-pk-3Ow">
                                        <rect key="frame" x="0.0" y="309.5" width="414" height="155"/>
                                        <color key="backgroundColor" red="0.11381412068923241" green="0.77538050518134716" blue="0.17179603289619241" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <rect key="contentStretch" x="0.25" y="0.0" width="0.94999999999999996" height="1"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="37"/>
                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <state key="normal" title="Start">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                            <color key="titleShadowColor" cocoaTouchSystemColor="darkTextColor"/>
                                        </state>
                                        <connections>
                                            <segue destination="z1F-ga-Kxs" kind="show" id="pCm-94-E5A"/>
                                        </connections>
...
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="87D-KZ-c9d">
                                <rect key="frame" x="20" y="373" width="374" height="57"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <color key="backgroundColor" red="0.11381412069999999" green="0.77538050520000001" blue="0.17179603290000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <fontDescription key="fontDescription" type="system" pointSize="37"/>
                                <state key="normal" title="French">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <segue destination="ece-Ck-6QW" kind="show" id="KUS-Xm-rBm"/>
                                </connections>
                            </button>
...
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="I6x-is-SjG">
                                <rect key="frame" x="20" y="457" width="374" height="59"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <color key="backgroundColor" red="0.28599975500000002" green="0.77538050520000001" blue="0.27365267729999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <fontDescription key="fontDescription" type="system" pointSize="37"/>
                                <state key="normal" title="Lesson">
                                    <color key="titleColor" cocoaTouchSystemColor="tableCellGroupedBackgroundColor"/>
                                </state>
                                <connections>
                                    <segue destination="538-bS-k5B" kind="show" id="262-7N-wqR"/>
                                </connections>
                            </button>
...
